Improve cover media playback

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               muted
               loop
               playsinline
+              preload="auto"
             ></video>
             <div class="cover-overlay"></div>
             <div class="cover-content">
@@ -159,13 +160,12 @@
                 clarity, and local store trust.
               </p>
               <figure class="project-preview">
-                <iframe
-                  src="http://www.donutpalace.store/index.luxe.html"
-                  title="Live preview of Donut Palace"
+                <img
+                  src="https://image.thum.io/get/width/1200/noanimate/http://www.donutpalace.store/"
+                  alt="Preview of Donut Palace website"
                   loading="lazy"
-                  referrerpolicy="no-referrer"
-                ></iframe>
-                <figcaption>Live preview (if blocked by site security, use View site)</figcaption>
+                />
+                <figcaption>Preview image (site blocks iframe)</figcaption>
               </figure>
               <ul>
                 <li>Warm, memorable visual branding</li>
@@ -173,7 +173,7 @@
                 <li>Clear conversion prompts</li>
               </ul>
               <a
-                href="http://www.donutpalace.store/index.luxe.html"
+                href="http://www.donutpalace.store/"
                 class="project-link"
                 target="_blank"
                 rel="noopener noreferrer"
