Add contact page and update navigation

--- a/index.html
+++ b/index.html
@@ -51,9 +51,47 @@
             </div>
           </article>
 
+          <article class="page" aria-label="Contact page">
+            <div class="page-inner contact-page">
+              <p class="page-number">01</p>
+              <p class="label">Contact</p>
+              <h3>ForgeAI Design Studio</h3>
+              <p>
+                Let’s build something polished, fast, and intentional. Reach out directly or scan
+                the QR to connect.
+              </p>
+              <div class="contact-grid">
+                <div class="contact-details">
+                  <p class="contact-item">
+                    <span class="contact-label">Phone</span>
+                    <a href="tel:+17857892522">785-789-2522</a>
+                  </p>
+                  <p class="contact-item">
+                    <span class="contact-label">Email</span>
+                    <a href="mailto:christoffersent@gmail.com">christoffersent@gmail.com</a>
+                  </p>
+                  <p class="contact-item">
+                    <span class="contact-label">GitHub</span>
+                    <a
+                      href="https://github.com/T24085/ForgeAi"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >github.com/T24085/ForgeAi</a
+                    >
+                  </p>
+                </div>
+                <figure class="qr-card">
+                  <img src="./qrcode_t24085.github.io.png" alt="QR code for ForgeAI Design Studio" />
+                  <figcaption>Scan to view ForgeAI online</figcaption>
+                </figure>
+              </div>
+              <a class="project-link" href="mailto:christoffersent@gmail.com">Start a project</a>
+            </div>
+          </article>
+
           <article class="page" aria-label="Project one">
             <div class="page-inner">
-              <p class="page-number">01</p>
+              <p class="page-number">02</p>
               <p class="label">Brand Commerce</p>
               <h3>Sunfire Chili Spice Co.</h3>
               <p>
@@ -86,7 +124,7 @@
 
           <article class="page" aria-label="Project two">
             <div class="page-inner">
-              <p class="page-number">02</p>
+              <p class="page-number">03</p>
               <p class="label">Retail Identity</p>
               <h3>Material Girls Quilt Shop</h3>
               <p>
@@ -119,7 +157,7 @@
 
           <article class="page" aria-label="Project three">
             <div class="page-inner">
-              <p class="page-number">03</p>
+              <p class="page-number">04</p>
               <p class="label">Legacy Sports</p>
               <h3>X-Ring Classic</h3>
               <p>
@@ -152,7 +190,7 @@
 
           <article class="page" aria-label="Project four">
             <div class="page-inner">
-              <p class="page-number">04</p>
+              <p class="page-number">05</p>
               <p class="label">Food & Retail</p>
               <h3>Donut Palace</h3>
               <p>
@@ -161,7 +199,7 @@
               </p>
               <figure class="project-preview">
                 <img
-                  src="https://image.thum.io/get/width/1200/noanimate/http://www.donutpalace.store/"
+                  src="./DonutPalace.png"
                   alt="Preview of Donut Palace website"
                   loading="lazy"
                 />
@@ -184,7 +222,7 @@
 
           <article class="page" aria-label="Project five">
             <div class="page-inner">
-              <p class="page-number">05</p>
+              <p class="page-number">06</p>
               <p class="label">League Platform</p>
               <h3>Tribes Professional League</h3>
               <p>
@@ -217,7 +255,7 @@
 
           <article class="page" aria-label="Project six">
             <div class="page-inner">
-              <p class="page-number">06</p>
+              <p class="page-number">07</p>
               <p class="label">Team Identity</p>
               <h3>Team DPRK</h3>
               <p>
@@ -250,7 +288,7 @@
 
           <article class="page" aria-label="Project seven">
             <div class="page-inner">
-              <p class="page-number">07</p>
+              <p class="page-number">08</p>
               <p class="label">Entertainment Brand</p>
               <h3>The Killing Floor King</h3>
               <p>
@@ -280,13 +318,51 @@
               >
             </div>
           </article>
+
+          <article class="page" aria-label="Contact page">
+            <div class="page-inner contact-page">
+              <p class="page-number">09</p>
+              <p class="label">Contact</p>
+              <h3>ForgeAI Design Studio</h3>
+              <p>
+                Let’s build something polished, fast, and intentional. Reach out directly or scan
+                the QR to connect.
+              </p>
+              <div class="contact-grid">
+                <div class="contact-details">
+                  <p class="contact-item">
+                    <span class="contact-label">Phone</span>
+                    <a href="tel:+17857892522">785-789-2522</a>
+                  </p>
+                  <p class="contact-item">
+                    <span class="contact-label">Email</span>
+                    <a href="mailto:christoffersent@gmail.com">christoffersent@gmail.com</a>
+                  </p>
+                  <p class="contact-item">
+                    <span class="contact-label">GitHub</span>
+                    <a
+                      href="https://github.com/T24085/ForgeAi"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >github.com/T24085/ForgeAi</a
+                    >
+                  </p>
+                </div>
+                <figure class="qr-card">
+                  <img src="./qrcode_t24085.github.io.png" alt="QR code for ForgeAI Design Studio" />
+                  <figcaption>Scan to view ForgeAI online</figcaption>
+                </figure>
+              </div>
+              <a class="project-link" href="mailto:christoffersent@gmail.com">Start a project</a>
+            </div>
+          </article>
         </div>
 
         <nav class="controls" aria-label="Page controls">
           <button id="prevBtn" class="nav-btn" type="button" aria-label="Previous page">
             Previous
           </button>
-          <p class="status" id="pageStatus">Page 1 of 8</p>
+          <p class="status" id="pageStatus">Page 1 of 10</p>
           <button id="nextBtn" class="nav-btn" type="button" aria-label="Next page">
             Next
           </button>
