--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
       name="description"
       content="Magazine-inspired web design portfolio with interactive page flips."
     />
+    <meta property="og:title" content="ForgeAI Design Studio" />
+    <meta
+      property="og:description"
+      content="Magazine-inspired web design portfolio featuring ForgeAI Design Studio’s latest work."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://t24085.github.io/ForgeAi/" />
+    <meta
+      property="og:image"
+      content="https://t24085.github.io/ForgeAi/forgeai-logo.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ForgeAI Design Studio" />
+    <meta
+      name="twitter:description"
+      content="Magazine-inspired web design portfolio featuring ForgeAI Design Studio’s latest work."
+    />
+    <meta
+      name="twitter:image"
+      content="https://t24085.github.io/ForgeAi/forgeai-logo.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
