Update hero reveal layering

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="cover-reveal" id="coverReveal">
               <svg class="cover-mask-svg" aria-hidden="true">
                 <mask id="coverMask" maskUnits="userSpaceOnUse" maskContentUnits="userSpaceOnUse">
-                  <rect width="100%" height="100%" fill="black"></rect>
+                  <rect width="100%" height="100%" fill="white"></rect>
                   <g class="cover-mask-wrapper"></g>
                 </mask>
               </svg>
@@ -80,7 +80,7 @@
               />
               <video
                 class="cover-reveal-video"
-                src="./HeroReveal.mp4"
+                src="./MatrixCodeHero.mp4"
                 autoplay
                 muted
                 loop
