Add template library flow and update preview generation

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <p class="edition">VOL. 01 / 2026</p>
           <h1>ForgeAI Design Studio</h1>
           <p class="tagline">Digital Editorial • Product Websites • Brand Systems</p>
+          <a class="library-link" href="./templates.html">Open Template Library</a>
         </header>
 
         <div class="book" id="book" aria-live="polite">
@@ -417,7 +418,10 @@
           <button id="prevBtn" class="nav-btn" type="button" aria-label="Previous page">
             Previous
           </button>
-          <p class="status" id="pageStatus">Page 1 of 10</p>
+          <p class="status" id="pageStatus">
+            Page 1 of 10
+            <a class="controls-library-link" href="./templates.html">Template Library</a>
+          </p>
           <button id="nextBtn" class="nav-btn" type="button" aria-label="Next page">
             Next
           </button>
