Use NewYorkCity background video in walk sequence

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
         <video
           id="neoWalkBgVideo"
           class="neo-walk-bg-video"
-          src="./matrixcodewall.mp4"
+          src="./NewYorkCity.mp4"
           muted
           loop
           preload="auto"
