Update ForgeAI templates and premium site content

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
         <video
           id="neoWalkBgVideo"
           class="neo-walk-bg-video"
-          src="./NewYorkCity.mp4"
+          src="./NewYork.mp4"
           muted
           loop
           preload="auto"
